--- a/index.html
+++ b/index.html
@@ -1,14 +1,178 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/main.min.css">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/main.css" />
+    <title>Scoot</title>
+  </head>
 
+  <body>
+    <!-- Navigation start-->
+    <nav class="header-navigation">
+      <div class="big-container">
+        <div class="nav">
+          <button type="button" class="burger">
+            <img src="./assets/icons/burger.svg" alt="" />
+          </button>
+          <div class="nav-wrapper">
+            <div class="header-logo">
+              <a href="#"> <img src="./assets/icons/scoot.svg" alt="logo" /></a>
+            </div>
+            <ul class="navigation">
+              <li class="nav-items">
+                <a href="#" class="header-nav__link">About</a>
+              </li>
+              <li class="nav-items">
+                <a href="#" class="header-nav__link">Location</a>
+              </li>
+              <li class="nav-items">
+                <a href="#" class="header-nav__link">Careers</a>
+              </li>
+            </ul>
+          </div>
+          <button type="button" class="navigation-btn btn">
+            <a href="#" class="nav-btn__link">Get Scootin</a>
+          </button>
+        </div>
+      </div>
+    </nav>
+    <!-- Navigation end-->
+    <!-- Intro start-->
+    <section class="intro">
+      <div class="big-container">
+        <div class="intro-text">
+          <h1 class="intro-title">Scooter sharing made simple</h1>
+
+          <div class="intro-text__items">
+            <p class="intro-descr">
+              Scoot takes the hassle out of urban mobility. Our bikes are placed
+              in convenient locations in each of our cities. Use our app to
+              locate the nearest bike, unlock it with a tap, and you’re away!
+            </p>
+            <button class="intro-btn btn">
+              <a href="#" class="intro-btn__link">Get Scootin</a>
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Intro end-->
+   
+      <!-- Options start-->
+      <section class="options">
+        <div class="container">
+            <ul class="options-holder">
+                <li class="options-item">
+                  <div class="options__img">
+                    <img src="./assets/icons/mobile-icon.svg" alt="mobile" />
+                  </div>
+                  <div class="options-items__text">
+                    <h3 class="options-items-title">Locate with app</h3>
+                    <p class="options-items-descr">
+                      Use the app to find the nearest scooter to you. We are
+                      continuously placing scooters in the areas with most demand, so
+                      one should never be too far away.
+                    </p>
+                  </div>
+                </li>
+                <li class="options-item">
+                  <div class="options__img">
+                    <img src="./assets/icons/scooter-icon.svg" alt="scooter" />
+                  </div>
+                  <div class="options-items__text">
+                    <h3 class="options-items-title">Pick your scooter</h3>
+                    <p class="options-items-descr">
+                      We show the most important info for the scooters closest to you.
+                      So you know how much charge they have left and can see roughly
+                      how much it will cost.
+                    </p>
+                  </div>
+                </li>
+                <li class="options-item">
+                  <div class="options__img">
+                    <img src="./assets/icons/scooter-rider.svg" alt="scooter-rider" />
+                  </div>
+                  <div class="options-items__text">
+                    <h3 class="options-items-title">Enjoy the ride</h3>
+                    <p class="options-items-descr">
+                      Scan the QR code and the bike will unlock. Retract the cable
+                      lock, put on a helmet, and you’re off! Always lock bikes away
+                      from walkways and accessibility ramps.
+                    </p>
+                  </div>
+                </li>
+        </div>
+        </ul>
+      </section>
+      <!-- Options end-->
+      <!-- Telementry start -->
+      <section class="telemetry">
+       <div class="container">
+        <div class="column-wrapper telemetry-wrapper">
+            <div class="column-text telemetry-text">
+              <h3 class="column-text__title telemetry-text__title">Easy to use riding telemetry</h3>
+              <p class="column-text__descr telemetry-text__descr">
+                  The Scoot app is available with riding telemetry. This means it can show you your average speed, how long you've been using the scooter, your traveling distance, and many more things all in an easy to use app.
+              </p>
+              <button type="button" class="column-btn btn">
+                  <a href="#">Learn More</a>
+              </button>
+            </div>
+            <div class="column-img telemetry-img">
+              <img src="./assets/images/user.png" alt="user-avatar">
+            </div>
+          </div>
+       </div>
+      </section>
+      <!-- Telementry end -->
+      <!-- City start -->
+      <section class="telemetry">
+        <div class="container">
+         <div class="column-wrapper city-wrapper">
+            <div class="column-img city-img">
+                <img src="./assets/images/city.jpg" alt="city">
+              </div>
+             <div class="column-text city-text">
+               <h3 class="column-text__title city-text__title">Coming to a city near you</h3>
+               <p class="column-text__descr city-text__descr">
+                Scoot is available in 4 major cities so far. We’re expanding rapidly, so be sure to let us know if you want to see us in your hometown. We’re aiming to let our scooters loose on 23 cities over the coming year.
+               </p>
+               <button type="button" class="column-btn btn">
+                   <a href="#">Learn More</a>
+               </button>
+             </div>
+            
+           </div>
+        </div>
+       </section>
+      <!-- City start -->
+      <!-- Payment start -->
+      <section class="telemetry">
+        <div class="container">
+         <div class="column-wrapper telemetry-wrapper">
+             <div class="column-text telemetry-text">
+               <h3 class="column-text__title telemetry-text__title">Zero hassle payments</h3>
+               <p class="column-text__descr telemetry-text__descr">
+                Our payment is as easy as one two three. We accept most credit cards and debit cards. You can also link your PayPal account inside the app. Need to pay later? No worries! You can defer payment for up to a month.
+               </p>
+               <button type="button" class="column-btn btn">
+                   <a href="#">Learn More</a>
+               </button>
+             </div>
+             <div class="column-img telemetry-img">
+               <img src="./assets/images/cash.png" alt="payment">
+             </div>
+           </div>
+        </div>
+       </section>
+      <!-- Payment end -->
+      <!-- Prefooter start -->
+      <!-- Prefooter end -->
+      <!-- Footer start -->
+      <!-- Footer end -->
+    
     <script src="./js/main.js"></script>
-</body>
+  </body>
 </html>
